--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,33 +1,46 @@
-name: Build and Push Docker Image
+name: Build, Test and Push Docker
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
+    branches: ["main"]
+  pull_request: 
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      # 1. Descargar el código
       - name: Checkout
         uses: actions/checkout@v4
 
+      # 2. Instalar dependencias de Node.js
+      - name: Install dependencies
+        run: npm install
+
+      # 3. Ejecutar pruebas
+      - name: Run tests
+        run: npm test -- --coverage
+
+      # 4. Extraer metadata de Docker
       - name: Extract Docker image metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ vars.DOCKER_USERNAME }}/ejemplo
+          images: ${{ secrets.DOCKER_USERNAME }}/ejemplo
 
+      # 5. Loguearse en Docker Hub
       - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ vars.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # 6. Configurar Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
+
+      # 7. Build y push de Docker
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
