Commit de prueba para aparecer en GitHub

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -49,3 +49,5 @@ jobs:
           annotations: ${{ steps.meta.outputs.annotations }}
           provenance: true
           sbom: true
+
+# Commit de prueba para aparecer en GitHub
