--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,14 +2,15 @@ trigger:
 - main
 
 pool:
-vmImage: 'ubuntu-latest'
+  vmImage: 'ubuntu-latest'
 
 steps:
--	task: NodeTool@0 inputs:
-versionSpec: '18.x' displayName: 'Instalar Node.js'
+- task: NodeTool@0
+  inputs:
+    versionSpec: '18.x'
+  displayName: 'Instalar Node.js'
 
--	script: | npm install
-npm run build
-displayName: 'Instalar dependencias y construir app'
-
-
+- script: |
+    npm install
+    npm run build
+  displayName: 'Instalar dependencias y construir app'
